--- a/velo_cf.yaml
+++ b/velo_cf.yaml
@@ -24,6 +24,7 @@ Parameters:
         Description: Velociraptor EC2 instance types
         Type: String
         Default: t2.medium
+        # you can add more values as needed, such as t2.large
         AllowedValues:
             - t2.micro
             - t2.nano
@@ -167,7 +168,8 @@ Resources:
 
             NetworkInterfaces:
                 -
-                    AssociatePublicIpAddress: true
+                    #AssociatePublicIpAddress: true
+                    #uncomment above if you want to use random EIP allocation of EC2 and block comment the rElasticIP section
                     DeviceIndex: "0"
                     GroupSet:
                         - !Ref rPublicAccessSecurityGroup
@@ -177,14 +179,13 @@ Resources:
                     Key: Name
                     Value: !Sub '${AWS::StackName}-velociraptor2'
 
-    # rElasticIP:
-        # #Type: AWS::EC2::EIP
-        # Type: AWS::EC2::EIPAssociation
-        # Properties:
-            # #Domain: vpc
-            # #!Ref pVpcID
-            # AllocationId : <enter eipalloc-xxxxxxxxx>
-            # InstanceId: !Ref rVelociraptor    
+     rElasticIP:
+         Type: AWS::EC2::EIPAssociation
+         Properties:
+            #Domain: vpc
+            #!Ref pVpcID
+            AllocationId : <enter eipalloc-xxxxxxxxx>
+            InstanceId: !Ref rVelociraptor    
     
 Outputs:
 
